# VerifiableImageSecretSharing

./: .gitignore  CMakeLists.txt  README.md  main.c  testDecrypt.c  testEncrypt.c  testEncrypterDecrypter.c
bmpReader/: bmpReader.c  bmpReader.h  testBmpReader.c
decrypter/: decrypter.c  decrypter.h  testDecrypter.c
encrypter/: encrypter.c  encrypter.h  testEncrypter.c
paramParser/: paramParser.c  paramParser.h
src/: main.c
src/bmpReader/: bmpReader.c
src/decrypter/: decrypter.c  decrypter.h  testDecrypter.c
src/encrypter/: encrypter.c  testEncrypter.c
src/paramParser/: paramParser.c  paramParser.h
src/stenography/: testStenography.c
src/tests/: testEncrypterDecrypter.c
src/utils/matrix/: matrix.c  testMatrix.c
src/utils/multiplicativeInverse/: multiplicativeInverse.c  multiplicativeInverse.h
src/utils/random/: random.c
stenography/: stenography.c  stenography.h
utils/: matrix.c  matrix.h  multiplicativeInverse.h  testMatrix.c
utils/gaussElimination/: gaussElimination.c  gaussElimination.h  testGaussElimination.c
utils/matrix/: matrix.c  matrix.h
utils/matrixArray/: matrixArray.c  matrixArray.h
utils/random/: random.h
